2004-02-07  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* Documentation/user/refman.itely (Sound): 
	note about number of channels.

	* scm/music-functions.scm (voicify-music): add \context Staff for
	<< \\ >> polyphony.

	* lily/parser.yy (verbose_command_req): \skip now creates
	SkipMusic, and does not lead to spurious staves.

	* scm/define-music-types.scm (music-descriptions): rename
	NonEventSkip to SkipMusic

	* input/no-notation/midi-lyric-barcheck.ly: new file.

	* input/regression/collision-dots-invert.ly: new file.

	* lily/note-collision.cc (check_meshing_chords): add stem_to_stem
	case.

	* lily/new-lyric-combine-music-iterator.cc (process): let iterator
	die if melody died too.

2004-02-06  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/source-file.cc (load_stdin): add trailing 0. Fixes problem
	with reading from stdin.

	* lily/slur-performer.cc (try_music): new file.

	* lily/melisma-performer.cc (try_music): new file. Handle
	melismata to help lyrics.

	* lily/beam-performer.cc (try_music): new file. Handle beam events
	to help lyrics.

	* lily/score-performer.cc (one_time_step): reinstate
	process_music().

	* lily/performer.cc (process_music): add to interface.

	* lily/performer-group-performer.cc (process_music): new function.

	* lily/dot-column.cc (do_shifts): do collision resolution before
	dot positioning.
	
	* scripts/lilypond-book.py (Snippet.output_print_filename): new
	file, process printfilename option.
	(Snippet.__init__): rewrite: do not use global variables h or
	index.
	(main): really support -I option.
	(find_toplevel_snippets): new code.
	(find_toplevel_snippets): reinstate old version, without global variables. 

	* tex/texinfo.tex: really add file.
	
2004-02-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/lilypond-book.py (find_toplevel_snippets): Python < 2.3
	compatibility.

2004-02-06  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scripts/hw-lilypond-book.py (Snippet.output_print_filename): 
