@@ -1,7 +1,7 @@
 depth = ../..
 
 STEPMAKE_TEMPLATES=documentation texinfo tex
-LILYPOND_BOOK_FLAGS = --process="lilypond-bin -I $(srcdir)/input/regression -e '(ly:set-option (quote internal-type-checking) \#t)'"
+LILYPOND_BOOK_FLAGS = --process="lilypond-bin -H texidoc -I $(srcdir)/input/regression -e '(ly:set-option (quote internal-type-checking) \#t)'"
 LOCALSTEPMAKE_TEMPLATES=lilypond ly lysdoc
 EXTRA_DIST_FILES=README
 
@@ -9,3 +9,5 @@ include $(depth)/make/stepmake.make
 
 TITLE=LilyPond Template Files
 
+
+.PRECIOUS: $(outdir)/collated-files.texi
